# cel-memory-sqlite

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: basic.rs  retrieve_bench.rs
migrations/: 001_initial.sql
src/: cache.rs  embedder.rs  error.rs  fastembed_impl.rs  lib.rs  migrations.rs  provider.rs  summarizer.rs  vec_extension.rs
tests/: smoke.rs  swap.rs
